# macds

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: __init__.py  config.py  database.py  main.py  requirements.txt
backend/models/: __init__.py  models.py
backend/routers/: __init__.py  agents.py  auth.py  billing.py  elastic_swarm.py  github.py  registry.py  stacks.py  workspaces.py
backend/services/: __init__.py  agent_service.py  auth_service.py  bulk_insert.py  github_service.py  workflow_service.py  workspace_service.py
docker/: backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  nginx.conf
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/callback/: page.tsx
frontend/app/auth/login/: page.tsx
frontend/app/auth/success/: page.tsx
frontend/app/billing/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/components/: Logo.tsx  Navbar.tsx  RedstoneLogo.tsx
frontend/app/docs/: layout.tsx  page.tsx
frontend/app/docs/agents/: page.tsx
frontend/app/docs/api/: page.tsx
frontend/app/docs/cli/: page.tsx
frontend/app/docs/contracts/: page.tsx
frontend/app/elastic-swarm/: page.tsx
frontend/app/privacy/: page.tsx
frontend/app/registry/: page.tsx
frontend/app/stacks/: page.tsx
frontend/app/terms/: page.tsx
frontend/app/workspaces/: page.tsx
frontend/context/: ToastContext.tsx
frontend/lib/: api.ts
sdk/: README.md  pyproject.toml
sdk/redstone_sdk/: __init__.py  cli.py  client.py  config.py
(+23 files in other folders)
